test/users/ferguson/recordassignstring.init.good
recordassignstring.chpl:10: error: unresolved call 'Point.init(string)'
recordassignstring.chpl:1: note: candidates are: Point.init(x: int(64), y: int(64))
recordassignstring.chpl:1: note:                 Point.init(other: Point)
